--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -21,7 +21,7 @@
     <div class="admin-card">
         <div class="card-body">
             <div class="stat">
-                <div class="label">Session Registrations</div>
+                <div class="label">Program Registrations</div>
                 <div class="value">{{ program_registrations|length }}</div>
                 <div class="chip"><a href="/admin/program-registrations" style="color: #fff; text-decoration: none;">View all</a></div>
             </div>
