--- a/templates/contact.html
+++ b/templates/contact.html
@@ -266,6 +266,9 @@
 
             fetch('/contact', {
                     method: 'POST',
+                    headers: {
+                        'X-Requested-With': 'XMLHttpRequest'
+                    },
                     body: formData
                 })
                 .then(response => response.json())
