--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -102,9 +102,7 @@
                 </div>
             </header>
 
-            {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %}
-            <div class="alert alert-{{ category }}">{{ message }}</div>
-            {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock %}
+            {% block content %}{% endblock %}
         </main>
     </div>
 
